Fri Nov 26 14:10:56 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ConditionManager.h:
        * connectors/dds4ccm/impl/ndds/WaitSet.h:
          Changed forward declaration (struct instead of class).

        * connectors/dds4ccm/impl/ndds/Publisher.cpp:
          Set listener to 0 explicitely (to be consistent with subscriber).

        * connectors/dds4ccm/impl/ndds/StatusCondition.h:
        * connectors/dds4ccm/impl/ndds/StatusCondition.cpp:
          Added set_rti_entity method. To be consistent with other classes.

        * connectors/dds4ccm/impl/ndds/Topic.h:
        * connectors/dds4ccm/impl/ndds/Topic.cpp:
          Resolved typos.

        * connectors/dds4ccm/tests/MultiTopic/Connector/MultiTopic_Connector_T.cpp:
          Layout changes.

Fri Nov 26 13:11:39 UTC 2010  Marijke Hengstmengel <mhengstmengel@remedy.nl>

        * connectors/ami4ccm/tests/ThreeComp/Sender/ThreeComp_Sender_exec.h:
        * connectors/ami4ccm/tests/ThreeComp/Sender/ThreeComp_Sender.mpc:
        * connectors/ami4ccm/tests/ThreeComp/Sender/ThreeComp_Sender_exec.cpp:
        * connectors/ami4ccm/tests/ThreeComp/descriptors/Plan.cdp:
        * connectors/ami4ccm/tests/ThreeComp/descriptors/run_test.pl:
        * connectors/ami4ccm/tests/ThreeComp/Receiver/ThreeComp_Receiver_exec.cpp:
        *  connectors/ami4ccm/tests/ThreeComp/Receiver/ThreeComp_Receiver_exec.h:
        * connectors/ami4ccm/tests/ThreeComp/Master/ThreeComp_Master.mpc:
        * connectors/ami4ccm/tests/ThreeComp/Master/ThreeComp_Master_exec.cpp:
        * connectors/ami4ccm/tests/ThreeComp/Master/ThreeComp_Master_exec.h:
        * connectors/ami4ccm/tests/ThreeComp/Base/ThreeCompA_conn_i.h:
        * connectors/ami4ccm/tests/ThreeComp/Base/ThreeCompA_conn_i.cpp:
        Generated executors with -Gex. Solve Valgrind warning.



Fri Nov 26 10:39:30 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/dds4ccm_ts_default.mpb: